# ccsp-p-and-m

./: CONTRIBUTING.md  Makefile.am  configure.ac
arch/intel_usg/boards/arm_shared/scripts/: AutoReboot.sh  ScheduleAutoReboot.sh  calc_random_time_to_reboot_dev.sh  erouter0_ip_sync.sh  moca_status.sh  network_response.sh  partners_defaults.json  process_monitor.sh  revert_redirect.sh  start_lighttpd.sh
arch/intel_usg/boards/arm_shared/source/TR-181/board_sbapi/: cosa_deviceinfo_apis.c  cosa_dhcpv4_apis.c  cosa_dhcpv6_apis.c  cosa_ip_apis.c  cosa_nat_apis.c  cosa_routing_apis.c  cosa_x_cisco_com_security_apis.c  (+1 more)
arch/intel_usg/boards/rdkb_arm/config/comcast/: TR181-USGv2.XML
config-arm/: TR181-USGv2.XML  TR181-USGv2_bci.XML  TR181-USGv2_nowifi.XML  comcast-TR181-USGv2.XML
config-mips/: TR181-USGv2.XML  TR181-USGv2_bci.XML  comcast-TR181-USGv2.XML
config-pc/: TR181-USGv2.XML
custom-pc/comcast/source/TR-181/custom_ml/: cosa_deviceinfo_dml_custom.c
custom-pc/comcast/source/TR-181/custom_sbapi/: cosa_deviceinfo_apis_custom.c
custom/comcast/source/TR-181/custom_include/: cosa_deviceinfo_apis_custom.h  cosa_x_comcast-com_gre_apis.h  dml_tr181_custom_cfg_custom.h
custom/comcast/source/TR-181/custom_ml/: Makefile.am  cosa_deviceinfo_dml_custom.c  cosa_x_cisco_com_gre_dml.c  cosa_x_cisco_com_hotspot_dml.c  cosa_x_cisco_com_truestaticip_dml.c  cosa_x_comcast-com_gre_dml.c  cosa_x_comcast-com_gre_internal.c  cosa_x_comcast-com_gre_internal.h
custom/comcast/source/TR-181/custom_sbapi/: Makefile.am  cosa_deviceinfo_apis_custom.c  cosa_x_cisco_com_gre_apis.c  cosa_x_cisco_com_truestaticip_apis.c  cosa_x_comcast-com_gre_apis.c  cosa_x_comcast_com_gre_apis.c
scripts/: launch_tr69.sh
source-arm/TR-181/board_include/: dml_tr181_custom_cfg.h
source-arm/TR-181/board_ml/: Makefile.am  cosa_x_cisco_com_filetransfer_dml.c  cosa_x_cisco_com_filetransfer_internal.c
source-arm/TR-181/board_sbapi/: Makefile.am  cosa_GRE_webconfig_apis.c  cosa_bridging_apis.c  cosa_common_util.c  cosa_common_util.h  cosa_deviceinfo_apis.c  cosa_dhcpv4_apis.c  cosa_dhcpv4_webconfig_apis.c  cosa_dhcpv6_apis.c  cosa_dns_apis.c  cosa_drg_common.c  cosa_dslite_apis.c  cosa_dynamicdns_apis.c  cosa_ethernet_apis.c  cosa_ethernet_apis_ext.h  cosa_firewall_apis.c  cosa_gre_apis.c  cosa_hosts_apis.c  cosa_ip_apis.c  cosa_ipv6rd_apis.c  cosa_lgi_cloudui_apis.c  cosa_lgi_cloudui_apis.h  cosa_lgi_general_apis.c  cosa_mac_filter_apis.c  cosa_managedwifi_webconfig_apis.c  cosa_mapt_apis.c  cosa_nat_apis.c  cosa_nat_webconfig_apis.c  cosa_neighdisc_apis.c  cosa_ppp_apis.c  cosa_ra_apis.c  cosa_routing_apis.c  cosa_time_apis.c  cosa_upnp_apis.c  cosa_userinterface_apis.c  cosa_users_apis.c  cosa_x_cisco_com_ddns_apis.c  cosa_x_cisco_com_devicecontrol_apis.c  cosa_x_cisco_com_diagnostics_apis.c  cosa_x_cisco_com_filetransfer_apis.c  (+5 more)
source-mips/TR-181/board_include/: dml_tr181_custom_cfg.h
source-mips/TR-181/board_ml/: cosa_x_cisco_com_filetransfer_dml.c  cosa_x_cisco_com_filetransfer_internal.c
source-mips/TR-181/board_sbapi/: Makefile.am  cosa_bridging_apis.c  cosa_deviceinfo_apis.c  cosa_dhcpv4_apis.c  cosa_dhcpv6_apis.c  cosa_ethernet_apis.c  cosa_ip_apis.c  cosa_ppp_apis.c  cosa_ra_apis.c  cosa_routing_apis.c  cosa_x_cisco_com_devicecontrol_apis.c  cosa_x_cisco_com_security_apis.c
source-pc/PandMSsp/: Makefile.am
source-pc/TR-181/board_include/: cosa_deviceinfo_apis.h
source-pc/TR-181/board_ml/: cosa_x_cisco_com_filetransfer_dml.c  cosa_x_cisco_com_filetransfer_internal.c
source-pc/TR-181/board_sbapi/: cosa_deviceinfo_apis.c  cosa_hosts_apis.c  cosa_ppp_apis.c  cosa_routing_apis.c  cosa_x_cisco_com_devicecontrol_apis.c  cosa_x_cisco_com_security_apis.c
source-pc/TR-181/middle_layer_src/: cosa_apis_util.c  cosa_bridging_dml.c  cosa_deviceinfo_dml.c  cosa_dhcpv4_dml.c  cosa_dhcpv6_dml.c  cosa_ip_dml.c  cosa_nat_dml.c  cosa_ra_dml.c  cosa_routing_dml.c  cosa_x_cisco_com_devicecontrol_dml.c
source/PandMSsp/: Makefile.am  ssp_action.c  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/include/: cosa_bridging_apis.h  cosa_deviceinfo_apis.h  cosa_dhcpv4_apis.h  cosa_dhcpv6_apis.h  cosa_dml_api_dns.h  cosa_dslite_apis.h  cosa_dynamicdns_apis.h  cosa_ethernet_apis.h  cosa_firewall_apis.h  cosa_ip_apis.h  cosa_lanmanagement_apis.h  cosa_lgi_general_apis.h  cosa_lgi_iperf_apis.h  cosa_lgi_plume_apis.h  cosa_mac_filter_apis.h  cosa_managedwifi_webconfig_apis.h  cosa_nat_apis.h  cosa_neighdisc_apis.h  cosa_ra_apis.h  cosa_routing_apis.h  cosa_time_apis.h  cosa_userinterface_apis.h  cosa_users_apis.h  cosa_x_cisco_com_ddns_apis.h  cosa_x_cisco_com_devicecontrol_apis.h  cosa_x_cisco_com_security_apis.h  dmsb_tr181_psm_definitions.h  speedboost_webconfig_apis.h
source/TR-181/integration_src.shared/: Makefile.am  cosa_ethernet_apis_multilan.c  cosa_ip_apis_multilan.c  cosa_x_cisco_com_multilan_apis.c
source/TR-181/middle_layer_src/: Makefile.am  cosa_GRE_dml.c  cosa_adv_parental_control_dml.c  cosa_apis_busutil.c  cosa_apis_util.c  cosa_apis_util.h  cosa_bridging_dml.c  cosa_bridging_internal.c  cosa_com_cisco_spvtg_ccsp_pam_dml.c  cosa_deviceinfo_dml.c  cosa_deviceinfo_dml.h  cosa_deviceinfo_internal.c  cosa_deviceinfo_internal.h  cosa_dhcpv4_dml.c  cosa_dhcpv4_dml.h  cosa_dhcpv4_internal.c  cosa_dhcpv4_internal.h  cosa_dhcpv6_dml.c  cosa_dhcpv6_internal.c  cosa_dhcpv6_internal.h  cosa_dml_api_common.h  cosa_dns_dml.c  cosa_dns_dml.h  cosa_dns_internal.c  cosa_dns_internal.h  cosa_dslite_dml.c  cosa_dslite_internal.c  cosa_dynamicdns_dml.c  cosa_dynamicdns_internal.c  cosa_ethernet_dml.c  cosa_ethernet_internal.c  cosa_firewall_dml.c  cosa_firewall_dml.h  cosa_firewall_internal.c  cosa_firewall_internal.h  cosa_gatewayinfo_dml.c  cosa_gre_internal.c  cosa_hosts_dml.c  cosa_hosts_internal.c  cosa_interfacestack_dml.c  (+143 more)
source/test/: Makefile.am  cosa_common_util_test.cpp  gtest_main.cpp  pandmssp_mock.cpp  pandmssp_mock.h  rbus_handler_test.cpp  speedBoostWebconfigApisGtest.cpp
source/test/mocks/: commonutil_mock.cpp  commonutil_mock.h  rbushandler_mock.cpp  rbushandler_mock.h
